--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,45 @@ body {
     }
 }
 
+/* Add styles for the tab bar */
+.tab-bar {
+    position: fixed;
+    top: 0;
+    margin-top: 10px;
+    width: 90%;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    background-color: rgba(42, 46, 53, 0.8);
+    padding: 10px 0;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,1.5);
+    backdrop-filter: blur(8px);
+    z-index: 1000;
+    flex-direction: row;
+    
+}
+
+/* Add styles for the tabs */
+.tab {
+    color: #E3E3E3;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+}
+
+.tab:hover {
+    background-color: #5b5d64;
+    cursor: none;
+}
+
+/* Adjust body padding to account for fixed tab bar */
+body {
+    padding-top: 60px; /* Adjust this value if needed */
+}
+
 /* (PHONE VERSION) */
 @media (max-width: 768px) {
     .container {
