--- a/countdown/birthday.css
+++ b/countdown/birthday.css
@@ -7,6 +7,22 @@
     align-content: center;
 }
 
+#countdown {
+    z-index: 1;
+    position: relative;
+    text-align: center;
+}
+
+#tsparticles {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
 body {
     background-color: black;
     display: flex;
